dockerizar correctamente y añadir sistema de logros